; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_pager.c_pbuf_dtor.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_pager.c_pbuf_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i64, i64 }

@NOCRED = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*)* @pbuf_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pbuf_dtor(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.buf*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.buf*
  store %struct.buf* %9, %struct.buf** %7, align 8
  %10 = load %struct.buf*, %struct.buf** %7, align 8
  %11 = getelementptr inbounds %struct.buf, %struct.buf* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @NOCRED, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %3
  %16 = load %struct.buf*, %struct.buf** %7, align 8
  %17 = getelementptr inbounds %struct.buf, %struct.buf* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @crfree(i64 %18)
  %20 = load i64, i64* @NOCRED, align 8
  %21 = load %struct.buf*, %struct.buf** %7, align 8
  %22 = getelementptr inbounds %struct.buf, %struct.buf* %21, i32 0, i32 0
  store i64 %20, i64* %22, align 8
  br label %23

23:                                               ; preds = %15, %3
  %24 = load %struct.buf*, %struct.buf** %7, align 8
  %25 = getelementptr inbounds %struct.buf, %struct.buf* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @NOCRED, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %37

29:                                               ; preds = %23
  %30 = load %struct.buf*, %struct.buf** %7, align 8
  %31 = getelementptr inbounds %struct.buf, %struct.buf* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @crfree(i64 %32)
  %34 = load i64, i64* @NOCRED, align 8
  %35 = load %struct.buf*, %struct.buf** %7, align 8
  %36 = getelementptr inbounds %struct.buf, %struct.buf* %35, i32 0, i32 1
  store i64 %34, i64* %36, align 8
  br label %37

37:                                               ; preds = %29, %23
  %38 = load %struct.buf*, %struct.buf** %7, align 8
  %39 = call i32 @BUF_UNLOCK(%struct.buf* %38)
  ret void
}

declare dso_local i32 @crfree(i64) #1

declare dso_local i32 @BUF_UNLOCK(%struct.buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
